Rewrite access-tracking

--- a/test/index.html
+++ b/test/index.html
@@ -2,12 +2,14 @@
 <html>
 	<head>
 		<title>Matsui tests</title>
+		<meta charset="utf8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
 		<script src="../matsui.js"></script>
 		<script>
 			let api = Matsui;
-			let suiteKeys = ['access', 'merge', 'merge-watch', 'merge-hidden'];
+			let suiteKeys = ['access', 'merge', 'merge-tracked', 'merge-hidden'];
 		</script>
 
 		<script>
