--- a/test/index.html
+++ b/test/index.html
@@ -37,7 +37,7 @@
 				};
 			}
 			function Test(name, runFn, options) {
-				if (!(this instanceof Test)) return new Test(name, runFn);
+				if (!(this instanceof Test)) return new Test(name, runFn, options);
 				
 				this.name = name;
 				this.status = {iframe: "waiting"};
