Translate `$html-attr` to `attributes.camelCase`

--- a/uglify/index.html
+++ b/uglify/index.html
@@ -116,7 +116,7 @@
 		</div>
 		
 		<template @if="{optionsDialog}">
-			<dialog $modal="1" $close="${d => d.optionsDialog = false}">
+			<dialog $modal="1" $modal-close="${d => d.optionsDialog = false}">
 				<div>Hello!
 				</div>
 			</dialog>
