Test for tagged scoped

--- a/test/index.html
+++ b/test/index.html
@@ -18,7 +18,7 @@
 		</script>
 		<script>
 			let api = Matsui;
-			let suiteKeys = ['template', 'merge', 'merge-tracked', 'merge-hidden', 'access', 'access-combine'];
+			let suiteKeys = ['template-scoped', 'merge', 'merge-tracked', 'merge-hidden', 'access', 'access-combine', 'template'];
 		</script>
 
 		<script>
