--- a/uglify/index.html
+++ b/uglify/index.html
@@ -67,7 +67,7 @@
 				align-items: center;
 				justify-content: center;
 			}
-			textarea {
+			textarea, #output {
 				font-size: 0.85em;
 				font-family: "Lucida Console", "Lucida Sans Typewriter", monaco, "Bitstream Vera Sans Mono", monospace;
 				padding: 0.5em;
@@ -113,7 +113,13 @@
 			#output {
 				grid-area: output;
 				flex-grow: 1;
-				background: #EEE;
+				white-space: pre-wrap;
+				text-align: left;
+				margin: 0;
+				border-top: 2px solid #444;
+			}
+			#output code {
+				white-space: pre-wrap;
 			}
 			#live {
 				grid-area: live;
@@ -188,7 +194,7 @@
 				function removeFile(index) {
 					data.inputs.splice(index, 1);
 				}
-			</script>
+				</script>
 			<div id="file-column">
 				<div id="file-list">
 					<template @foreach="{input}">
@@ -207,19 +213,28 @@
 		<template @if="${d => !Array.isArray(d.input)}">
 			<textarea id="input" placeholder="JS code" autofocus
 				$input-keypath="input"
-				$input-done="${run}"></textarea>
+				$input-done="${uglifyUpdate}"></textarea>
 		</template>
 		
-		<button id="minify-button" $click="${run}">minify</button>
+		<button id="minify-button" $click="${uglifyUpdate}">minify</button>
 		<button id="options-button" $click="${d => d.optionsDialog = true}">options</button>
 		<div id="result-size">${d =>
-			(Array.isArray(d.input) ? d.input.map(f => f.code).join('') : d.input).length} → ${d => (d.output.error ? 'Error' : d.output.code.length + ' bytes')}</div>
+			(Array.isArray(d.input) ? d.input.map(f => f.code).join('') : d.input).length} → ${d => {
+				if (d.working) return "working...";
+				if (d.output.error) return 'Error';
+				return d.output.code.length + ' bytes';
+			}}</div>
 		<label id="live">
 			<input type="checkbox" $input-keypath="live">
 			live
 		</label>
-		<textarea id="output" placeholder="minified" readonly
-			$value="${d => d.output.error || d.output.code}"></textarea>
+		<script src="prism/prism.js"></script>
+		<link href="prism/prism.css" rel="stylesheet">
+		<pre id="output" class="language-javascript"><code $update="${(d, node) => {
+			let text = (d.output.error ? JSON.stringify(d.output.error) : d.output.code);
+			node.textContent = text;
+			if (text.length < 15000) Prism.highlightElement(node);
+		}}"></code></pre>
 		
 		<template @if="{optionsDialog}">
 			<dialog $modal="1" $modal-close="${d => d.optionsDialog = false}">
@@ -229,34 +244,63 @@
 		</template>
 
 		<!-- npx uglify-js --self --compress --mangle --output uglify.min.js -->
-		<script src="uglify.min.js"></script>
+		<script src="uglify.worker.js"></script>
 		<script src="../matsui.js"></script>
+		<script>
+			Matsui.global.attributes.update = (node, fn) => {
+				if (typeof fn == 'function') return data => {
+					fn(node); // `data` is already an implicit argument
+				};
+			};
+		</script>
 		<script src="../extra/sync.js"></script>
 		<script src="../extra/interaction.js"></script>
 <!--		<script src="../extra/log-dom.js"></script>-->
 		<script>
-			let notBefore = 0;
-			let runTimeout = null;
-		
-			function run(data) {
-				let go = () => {
-					let $ = document.querySelector.bind(document);
+			function SparseRunner(cpuRatio) {
+				let notBefore = 0;
+				let runTimeout = null;
+				cpuRatio = cpuRatio || 0.5;
+			
+				return task => {
+					clearTimeout(runTimeout);
+					setTimeout(() => {
+						let start, startCount = 0;
+						let timer = {
+							start() {
+								start = Date.now();
+								++startCount;
+							},
+							end() {
+								let duration = Date.now() - start;
+								notBefore = start + duration/cpuRatio;
+							}
+						};
+						
+						timer.start();
+						task(timer);
+						timer.end();
 
+					}, Math.max(notBefore - Date.now(), 0));
+				};
+			}
+			let uglifyRunner = SparseRunner();
+			function uglifyUpdate(data) {
+				data.working = true;
+				uglifyRunner(timer => {
 					let options = JSON.parse(JSON.stringify(data.options));
 					if (options.mangle && options.mangle.properties && options.mangle.properties.regex) {
 						options.mangle.properties.regex = new RegExp(options.mangle.properties.regex);
 					}
 					let inputCode = Array.isArray(data.input) ? data.input.map(f => f.code).join('\n;') : data.input;
-					let outputObj = UglifyJS.minify(inputCode, options);
-					data.output = outputObj;
-				};
-				clearTimeout(runTimeout);
-				setTimeout(() => {
-					let start = Date.now();
-					go();
-					let duration = Date.now() - start;
-					notBefore = Date.now() + duration; // only half the time
-				}, Math.max(notBefore - Date.now(), 0));
+
+					timer.start();
+					UglifyWorker().minify(inputCode, options).then(outputObj => {
+						data.output = outputObj;
+						data.working = false;
+						timer.end();
+					});
+				});
 			}
 		
 			function defaultOptions() {
@@ -283,7 +327,7 @@
 			
 			// Live updates, if enabled
 			wrapped.addUpdates(data => {
-				if (data.live) run(data);
+				if (data.live) uglifyUpdate(data);
 			});
 			
 			wrapped.syncHash(data => ({
