Check the ends of expressions

--- a/test/index.html
+++ b/test/index.html
@@ -18,7 +18,7 @@
 		</script>
 		<script>
 			let api = Matsui;
-			let suiteKeys = ['merge', 'merge-tracked', 'merge-hidden', 'access', 'access-combine', 'template', 'template-scoped'];
+			let suiteKeys = ['merge', 'merge-tracked', 'merge-hidden', 'access', 'access-combine', 'template', 'template-scoped', 'expressions'];
 		</script>
 
 		<script>
